--- a/src/pages/Scheduler/Scheduler.css
+++ b/src/pages/Scheduler/Scheduler.css
@@ -80,7 +80,7 @@ input:focus {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 20px;
-  background-color: #ffffff76;
+  background-color: #fffbfb76;
 }
 
 .schedule-item {
